Fixed overflow-x issue

--- a/client/src/components/user/layout/Header/MobileMenu/MobileMenu.module.sass
+++ b/client/src/components/user/layout/Header/MobileMenu/MobileMenu.module.sass
@@ -23,7 +23,8 @@
     transition: transform 200ms ease-in-out
     pointer-events: none
     overflow-y: scroll
-    height: calc(100vh - 3rem)
+    overflow-x: hidden
+    // height: calc(100vh - 3.4rem)
     // 
     &.submenu-open
       height: auto
